--- a/tex/main.tex
+++ b/tex/main.tex
@@ -169,6 +169,23 @@ we obtain
 results that are fairly close
 to the original,
 see Table~\ref{t:GSR-Ran-Runs}.
+%
+%
+The ``dynamic capacity'' \ce{Ex}
+is an optional maximal (positive) flux
+of nuclear \ce{Ran.GTP} to cytoplasmic \ce{Ran.GDP},
+which we determine using the additional equation
+\[
+	\label{e:Ex}
+	%
+	\ddt \ce{Ex}
+	=
+	k_{\ce{Ex}} \, [\ce{Ran . {GTP}}]_\text{nuc},
+	\quad
+	k_{\ce{Ex}} := \SI{10}{s^{-2}},
+	\TEXT{initial}
+	\ce{Ex} := \SI{0}{\micro M . s^{-1}}.
+\]
 
 %
 
@@ -309,16 +326,16 @@ the availability of \ce{GDP} and \ce{GTP}.
 	\label{e:Eq6}
 	%
 	\ddt
-	\ce{[IntA]}
+	[\ce{IntA}]
 	& =
 	-(r_4 + r_6)
-	\ce{[IntA]}
+	[\ce{IntA}]
 	+
 	r_5
-	\ce{[E]} \ce{[Ran.GTP_{nuc}]}
+	[\ce{E}] [\ce{Ran.GTP}]_\text{nuc}
 	+
 	r_3
-	\ce{[GTP]} \ce{[IntB]}
+	[\ce{GTP}] [\ce{IntB}]
 	%
 	%
 	\\
@@ -326,27 +343,27 @@ the availability of \ce{GDP} and \ce{GTP}.
 	%
 	%
 	\ddt
-	\ce{[IntB]}
+	[\ce{IntB}]
 	& =
-	r_6 \ce{[IntA]}
+	r_6 [\ce{IntA}]
 	+
-	r_2 \ce{[IntC]}
+	r_2 [\ce{IntC}]
 	-
-	(r_3 \ce{[GTP]} + r_7 \ce{[GDP]})
-	\ce{[IntB]}
+	(r_3 [\ce{GTP}] + r_7 [\ce{GDP}])
+	[\ce{IntB}]
 	%
 	\\
 	\label{e:Eq8}
 	%
 	\ddt
-	\ce{[IntC]}
+	[\ce{IntC}]
 	& =
 	-
-	(r_2 + r_8) \ce{[IntC]}
+	(r_2 + r_8) [\ce{IntC}]
 	+
-	r_1 \ce{[E]} \ce{[Ran.GDP_{nuc}]}
+	r_1 [\ce{E}] [\ce{Ran.GDP}]_\text{nuc}
 	+
-	r_7 \ce{[GDP]} \ce{[IntB]}
+	r_7 [\ce{GDP}] [\ce{IntB}]
 \]
 \end{subequations}
 
@@ -986,6 +1003,11 @@ reducing the IC50 seven-fold
 \TODO{Add \ce{R} to \ce{Ran . GTP} eqn}
 
 \TODO{Need \ce{Imp\beta . \ce{Ran . {GTP}} + Cargo <=> Imp\beta . Cargo + \ce{Ran . {GTP}}}?}
+
+Following \cite{Catimel} and \cite{Riddick},
+we also add
+the reaction 
+\ce{Imp$\beta$ . Cargo <=> Imp$\beta$^* . Cargo}
 \end{subequations}
 %
 \caption{%
