--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -67,3 +67,31 @@
   title = {Co-activation of {RanGTPase} and inhibition of {GTP} dissociation by {Ran}--{GTP} binding protein {RanBP1}},
   journal = {The {EMBO} Journal}
 }
+
+@article{RiddickMacara2005,
+  doi = {10.1083/jcb.200409024},
+  url = {https://doi.org/10.1083/jcb.200409024},
+  year = {2005},
+  month = mar,
+  publisher = {Rockefeller University Press},
+  volume = {168},
+  number = {7},
+  pages = {1027--1038},
+  author = {Gregory Riddick and Ian G. Macara},
+  title = {A systems analysis of importin-$\alpha$--$\beta$ mediated nuclear protein import},
+  journal = {Journal of Cell Biology}
+}
+
+@article{Catimel2001,
+  doi = {10.1074/jbc.m103531200},
+  url = {https://doi.org/10.1074/jbc.m103531200},
+  year = {2001},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {276},
+  number = {36},
+  pages = {34189--34198},
+  author = {Bruno Catimel and Trazel Teh and Marcos R.M. Fontes and Ian G. Jennings and David A. Jans and Geoffrey J. Howlett and Edouard C. Nice and Bostjan Kobe},
+  title = {Biophysical Characterization of Interactions Involving Importin-$\alpha$ during Nuclear Import},
+  journal = {Journal of Biological Chemistry}
+}
